--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
             <div class="resume-content">
                 <h2>My Resume</h2>
                 <p>Download my resume to learn more about my experience and qualifications.</p>
-                <a href="documents/Full stack web developer.pdf" download>Download Resume</a>
+                <a href="documents/Resume_Anurag_Shrivastav.pdf" download>Download Resume</a>
             </div>
         </div>
     </section>
